# Puertorico-editor

./: bun.lockb  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
puertorico-server/: Cargo.toml
puertorico-server/src/: cli_prams.rs  main.rs
resources/file-loader/: index.html
resources/main-editor/: index.html
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Aside.tsx  FileLoadAside.tsx  Header.tsx  MainEditorAsideBar.tsx
src/pages/file-loader/: FileLoaderApp.tsx  HeaderBarInner.tsx  main.tsx
src/pages/main-editor/: HeaderBarInner.tsx  MainEditorApp.tsx  main.tsx
src/static/syntax/: operators.ts
src/types/: syntax.ts
